--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ptbr">
     <head>
         <meta charset="UTF-8"/>
+	<meta content='width=device-width, initial-scale=1.0' name='viewport'>
         <title>Document</title>
 	<link href="./css/menu.css" rel="stylesheet"/>
 	<link href="./css/header.css" rel="stylesheet"/>
